src/test/deca/context/invalid/ContextSansObjet/Identification/floatNullInit.deca
//Description
//  Initialisation d'une variable float avec null
//
//Réponse
//  Erreur contextuelle ligne 9
//  type incompatible

{
    float x = null;
}